# Dock_MCI

./: camera_measurements.txt  readme.md
action_interfaces/: CMakeLists.txt
action_interfaces/action/: Dock.action  Poseerr.action
action_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
action_interfaces/install/action_interfaces/include/action_interfaces/action/: dock.hpp
action_interfaces/install/action_interfaces/include/action_interfaces/action/detail/: dock__builder.hpp  dock__traits.hpp  dock__type_support.h
action_interfaces/install/action_interfaces/share/action_interfaces/: local_setup.sh  package.sh
action_interfaces/install/action_interfaces/share/action_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  rosidl_cmake-extras.cmake
action_interfaces/install/action_interfaces/share/ament_index/resource_index/parent_prefix_path/: action_interfaces
action_interfaces/log/: latest_build
aruco/: CMakeLists.txt  package.xml
aruco/src/: aruco_diff.cpp
aruco_detector/: CMakeLists.txt  package.xml
aruco_detector/src/: aruco.cpp
cam_docking/: CMakeLists.txt  package.xml
cam_docking/src/: cam_docking.cpp
cam_subscriber/: CMakeLists.txt  package.xml
cam_subscriber/launch/: dock_action_server_launch.py
cam_subscriber/src/: cam_subscriber_node.cpp
cpp_srvc/: CMakeLists.txt  cpp_srvc.cpp  package.xml
dock_action/: CMakeLists.txt  package.xml
dock_action/launch/: CamDock_launch.py
dock_action/src/: B.npz  dock_action.cpp  test_publisher.cpp
dock_action_control/: CMakeLists.txt  package.xml
dock_action_control/include/: DockActionServer.h
dock_action_control/src/: dock_action_control.cpp
pose_estimator/: CMakeLists.txt  package.xml
pose_estimator/src/: pose_estimation.cpp
turtlebot4_docking_proc/: package.xml
turtlebot4_docking_proc/turtlebot4_docking_proc/: turtlebot4_docking_proc_node.py
turtlebot4_py_dock/: package.xml  setup.cfg  setup.py
turtlebot4_py_dock/turtlebot4_py_dock/: turtlebot4_py_dock_node.py
turtlebot4_py_gui/: package.xml  setup.cfg  setup.py
turtlebot4_py_gui/resource/: ros_gui.kv
turtlebot4_py_gui/turtlebot4_py_gui/: demo_node.py  srv_test.py  srv_test_client.py  turtlebot4_py_gui_node.py
