cmake_minimum_required(VERSION 3.8)
project(cam_docking)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

include_directories(
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/src
    )

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(action_interfaces REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(rclcpp_components REQUIRED)
find_package(OpenCV 4 REQUIRED)
find_package(irobot_create_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(depthai REQUIRED)
find_package(control_toolbox REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable(cam_docking src/cam_docking.cpp)
ament_target_dependencies(cam_docking rclcpp rclcpp_action rclcpp_components action_interfaces sensor_msgs irobot_create_msgs cv_bridge depthai OpenCV control_toolbox geometry_msgs)

include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries(cam_docking ${OpenCV_LIBS} )

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

install(TARGETS
  cam_docking
  DESTINATION lib/${PROJECT_NAME})

ament_package()
